[tool.poetry]
name = "deepsafe"
version = "0.1.0"
description = "Open source deepfake detection"
authors = ["Siddharth Kumar <siddharth123sk@gmail.com>"]
license = "Dual Licenses"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scikit-learn = "*"
scikit-image = "*"
albumentations = "1.1.0"
av = "9.2.0"
bokeh = "2.4.1"
boto3 = "1.21.27"
efficientnet_pytorch = "0.7.1"
facenet_pytorch = "2.5.2"
Flask = "2.1.2"
image_similarity_measures = "0.3.5"
matplotlib = "3.5.1"
opencv_python_headless = "4.5.5.64"
pandas = "*"
pathvalidate = "2.5.0"
Pillow = "9.2.0"
plotly = "5.6.0"
pretrainedmodels = "0.7.4"
requests = "2.27.1"
scipy = "*"
streamlit = "1.7.0"
torch = "1.10.2"
torchvision = "0.11.3"
validators = "0.18.2"
googleapis-common-protos = "1.6.0"
protobuf = "3.20.*"
click = "<=8.0.4"
altair = "4.1.0"
tensorflow = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"